Fixing recipe card description overflow

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -219,6 +219,8 @@ p,span {
 		padding-right: 5px;
 		padding-bottom: 5px;
 		height: 145px;
+		display: flex;
+		flex-direction: column;
 
 		%headings {
 			color: #242529;
